--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,10 @@ jobs:
       - name: Build your site
         run: npm run build # Ensure your `package.json` has a `build` script
       - name: Upload build artifacts
-        run: mkdir -p dist && echo "Build artifacts uploaded"
+        uses: actions/upload-artifact@v4
+        with:
+          name: github-pages
+          path: ./dist # Replace './dist' with the path to your build output directory
 
   deploy:
     needs: build
@@ -30,6 +33,10 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
+      - name: Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: github-pages
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
