--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,9 +19,9 @@ jobs:
       - name: Install dependencies
         run: npm install # Adjust this if you're using a different package manager
       - name: Build your site
-        run: npm run build # Ensure your `package.json` has a `build` script
-      - name: List build output
-        run: ls -l ./dist
+        run: npm run build
+      - name: Show Astro build output
+        run: cat ./dist/astro.log || echo "No log file found"
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
