--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,28 +17,19 @@ jobs:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
       - name: Install dependencies
-        run: npm install # Adjust this if you're using a different package manager
+        run: npm install
       - name: Build your site
         run: npm run build
-      - name: Show Astro build output
-        run: cat ./dist/astro.log || echo "No log file found"
+      - name: Debug build directory
+        run: ls -la ./dist
+      - name: Verify build output
+        run: |
+          if [ ! -d "./dist" ]; then
+            echo "Build output directory './dist' does not exist."
+            exit 1
+          fi
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: github-pages
-          path: ./dist # Replace './dist' with the path to your build output directory
-
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Download build artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: github-pages
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          path: ./dist
